--- a/proportal/views/pages/proportal/home.tt
+++ b/proportal/views/pages/proportal/home.tt
@@ -2,6 +2,7 @@
 	title = 'IMG ProPortal: Home';
 %]
 
+
 <style>
 
 /* MOVE TO SASS FILES */
@@ -20,7 +21,7 @@ label.myForm:after {
 }
 
 select {
-  border: 1px solid #5a5a5a; map-get( $jgi-palette, dk_grey ); 
+  border: 1px solid #5a5a5a; //map-get( $jgi-palette, dk_grey ); 
   border-radius: 0px;
   
   background: transparent;
@@ -31,30 +32,19 @@ select {
 
 }
 
-input {
-  border: 1px solid #5a5a5a; map-get( $jgi-palette, dk_grey ); 
-  border-radius: 0px;
-  
-  background: transparent;
-  padding:  0 20px;		
-  font-size: 14px;
-  height: 3em;
-}
-
-
 </style>
 
 
 <div class="cf">
 
-<div style="height:auto; overflow:hidden;">
+<div id="firstRow">
 	<div id="home-quick-search">
 		<!-- <div class="infoBox"> -->
 		<div class="infoBoxTitle" style="border-bottom: 1px solid gray;"><h3>Quick Search</h3></div>
 
 		<div id="home-quick-search-form">
 		
-			<div style="margin-bottom: 10px;">
+			<div>
 				<label class="myForm" for="search-domain">Search category</label>
 				<select id="search-domain"  style="width: 100%;">
 					<option value="genomes"> Genomes </option>
@@ -68,17 +58,23 @@ input {
 				<input id="search-keyword" type="text" style="width: 100%;"/>
 			</div>	
 		
-		
 			<button class="test-button-blue" style="float: right;">Go</button>
-
-
 
 		</div>
 	</div>
 
-	<div id="home-gallery">
+	[% PROCESS 'inc/gallery_images.tt';	
+		USE Math;
+		idx = Math.int(Math.rand(pics.size));	%]
 
+	<div id="home-gallery" style="background-image: url([% pics.$idx.url %])">
+		<div id="home-gallery-caption">
+			<p>[% pics.$idx.desc %]</p>
+		</div>
 	</div>
+
+
+
 </div> <!-- row -->
 
 <div class=" infoBox" id="home-stats">
