--- a/proportal/src/css/sass/partials/_forms.scss
+++ b/proportal/src/css/sass/partials/_forms.scss
@@ -44,6 +44,37 @@ input[type="text"], input[type="email"], input[type="password"], input[type="sea
         color: #666;
     }
 }
+
+
+
+
+/* labels */
+label.pp-form {
+	text-transform: uppercase;	
+	font-size: $element-font-size;;
+	display: block;
+	margin-top: 15px;		//for labels that appear above element.
+}
+
+label.pp-form:after {
+	clear: both;
+	float: left;
+}
+
+select.pp-form {
+  border: $element-border-width solid map-get( $jgi-palette, dk_grey ); 
+  border-radius: 0px;
+  
+  background: transparent;
+  padding:  0 $element-padding-sides;	//20px;	
+  text-transform: uppercase;	
+  font-size: $element-font-size;	//14px;
+  height: $element-height;	//3em;
+
+}
+
+
+
 //----------------------------------//
 // 				BUTTONS				//
 //----------------------------------//
@@ -51,7 +82,7 @@ input[type="text"], input[type="email"], input[type="password"], input[type="sea
 // BASE BUTTON STYLE
 //		variables defined in /modules/_variables.scss
 //------------------------------------
-button, html input[type="button"], input[type="reset"], input[type="submit"] {
+button, a.button, html input[type="button"], input[type="reset"], input[type="submit"] {
 
 	height: $button-height;
 	background: $button-bgcolor;
@@ -106,6 +137,105 @@ button:disabled {
 		&:active {	background: #ddd;	}
 	}	
 }
+
+
+// Dropdown Button
+//---------------------------------------------------
+
+.pp-dropdown {
+	padding: 0;
+	margin: 0;
+ 	height: $button-height;
+	border: $element-border-width solid $element-border-color;
+//     display: block;
+    vertical-align: middle;
+	
+	&:hover {
+    	border: $element-border-width solid darken( $element-border-color, 50% );
+    	color: darken($element-border-color, 50%);
+    	
+    	> label {
+    		color: darken($element-border-color, 50%);
+    	}
+    }
+    
+}
+
+label.pp-dropdown-button{	
+	font-size: $element-font-size;
+	color: $element-border-color;
+	text-transform: $button-transform;	
+	line-height: $button-height; 
+	margin-bottom: -2px;
+	display: block;
+	height: $button-height;
+	width: 100%;
+	padding: 0 40px 0 $element-padding-sides;
+    vertical-align: middle;
+    text-align: center;
+	@include element-up-arrow;
+}
+
+
+ul.pp-dropdown-button{
+	max-height:0;
+	padding:0;
+	margin: 0;
+	overflow:hidden;
+	list-style-type:none;
+	position:absolute;
+	border: $element-border-width solid $element-border-color;
+	display: none;
+	background: white;
+	
+
+	> li {
+		background: white;
+	}
+	
+	> li a{
+		display:table-cell;
+		vertical-align: middle;
+		text-decoration:none;
+		height: $button-height;
+		font-size: $element-font-size;
+		color: $element-border-color;
+		text-transform: $button-transform;	
+		line-height: $line-ht;
+		padding: 0 40px 0 $element-padding-sides;
+		border: 0;
+	} 
+
+	> li a:hover {
+		color: darken($element-border-color, 50%);
+// 		border: 0;
+	}
+}
+
+/*hide the inputs*/
+input.pp-dropdown-button {
+  display:none;
+  padding: 30px;
+ }
+
+/*show the second levele menu of the selected voice*/
+input.pp-dropdown-button:checked ~ ul{
+  max-height:200px;
+  display: block;
+
+}
+
+// change arrow when menu is displayed
+// input.pp-dropdown-button:checked + label{
+// 	@include element-down-arrow;
+// }
+
+input.pp-dropdown-button:checked + label{
+	@include element-down-arrow;
+}
+
+
+
 
 // INPUT BOX
 // input[type="text"] {
