--- a/proportal/src/css/sass/proportal.scss
+++ b/proportal/src/css/sass/proportal.scss
@@ -38,6 +38,10 @@
 @import "partials/grid";
 @import "partials/list-page";
 
+//Partials for list pages.
+@import "partials/generic-tables";	@include generic-tables;
+@import "partials/generic-carts";	@include generic-carts;
+
 // print style
 @import "partials/print";
 
